<resources>
    <string name="app_name">Practica04MendozaReyesAngelEmanuel</string>
    <string name="Titulo">Práctica 04 Activity con arreglos de objetos</string>
    <string name="peso">Peso</string>
    <string name="color">Color</string>
    <string name="modelo">Modelo</string>
    <string name="costo">Costo</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="limpiar">Limpiar</string>
    <string name="mostrar">Mensaje: </string>
</resources>